<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="20dp"
    app:cardCornerRadius="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/icon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_button"
            android:hint="@string/title_correo"
            android:padding="15dp"
            android:theme="@style/EditTextWhite" />

        <EditText
            android:id="@+id/edit_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_button"
            android:hint="@string/title_user"
            android:padding="15dp"
            android:theme="@style/EditTextWhite" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_button"
            android:hint="@string/title_nombre_usuraio"
            android:padding="15dp"
            android:theme="@style/EditTextWhite" />

        <EditText
            android:id="@+id/passw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_button"
            android:hint="@string/title_contraseña"
            android:padding="15dp"
            android:theme="@style/EditTextWhite" />

        <EditText
            android:id="@+id/conf_passw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_button"
            android:hint="@string/title_conf_contaseña"
            android:padding="15dp"
            android:theme="@style/EditTextWhite" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/title_registrar"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:theme="@style/RaisedButtonDark"

            />

    </LinearLayout>

</android.support.v7.widget.CardView>