<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="470dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@android:color/white"
    app:cardElevation="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/id_et_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/title_nombre_usuraio"
            android:theme="@style/EditTextWhite" />

        <EditText
            android:id="@+id/id_et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/title_contraseña"
            android:theme="@style/EditTextWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="OnClickButon"
                android:text="@string/title_boton_ingresar"
                android:theme="@style/RaisedButtonDark" />
        </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:onClick="crear_cuenta"
        android:text="@string/title_crear_cuenta"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>